[package]
name = "capture-dns"
version = "0.1.0"
authors = ["lilydjwg <lilydjwg@gmail.com>"]
edition = "2018"

[dependencies]
trust-dns-proto = "*"
structopt = "*"
structopt-derive = "*"
failure = "*"

[dependencies.pcap]
git = "https://github.com/lilydjwg/pcap"
version = "*"

[profile.release]
lto = true
